[fix] nowrap table header

--- a/src/assets/css/home-style-share.css
+++ b/src/assets/css/home-style-share.css
@@ -93,7 +93,7 @@ footer.footer .footer_wrapper .footer_box {
 
 .left {
     height: 50px;
-    margin-right: 20px;
+    margin-inline: 15px;
 }
 
 .left img {
